src/test/ui/question-mark-type-infer.stderr
error[E0283]: type annotations required: cannot resolve `_: std::ops::Bubble<std::result::Result<std::vec::Vec<i32>, ()>>`
  --> $DIR/question-mark-type-infer.rs:12:5
   |
LL |     l.iter().map(f).collect()? //~ ERROR type annotations required: cannot resolve
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: required by `std::ops::Bubble::bubble`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
